patroni-test/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prometheus.example.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus.apps.default
      secretName: prometheus-secret
